metadata/force-app/main/default/objects/CustomName_pNese__c/CustomName_pNese__c.object-meta.xml
<CustomObject>
    <description>Description_xmjzj</description>
    <label>CustomLabel_mooOX</label>
    <nameField>
        <label>CustomLabel_mooOX</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_mooOXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>