metadata/force-app/main/default/objects/CustomName_pNese__c/fields/CustomField_dvcVz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_dvcVz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzRZHH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>