metadata/force-app/main/default/objects/CustomName_pNese__c/fields/CustomField_RRYeS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_RRYeS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLPYfR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>